# mqtt-mcp-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.en.md  README.md  README.zh.md  build.sh  cloud-docker-compose.yml  cloud.Dockerfile  config.example.yaml  docker-compose.yml  mosquitto.conf  test-config.yaml
.github/workflows/: deploy-docs.yml  docs.yml  release.yml
deploy/: README.md  install.sh
docs/: faq.md  index.md  package-lock.json  package.json  pricing.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: custom.css
docs/api/: cli.md  cloud.md  sse.md  tools.md
docs/deploy/: build-from-source.md  docker.md  raspberry-pi.md
docs/guide/: ai-config.md  architecture.md  getting-started.md  rule-engine.md  what-is-mcp.md
src/: config.rs  lib.rs  license.rs  main.rs  ota.rs  reporter.rs  web.rs
src/ai/: anomaly.rs  bridge.rs  mod.rs  templates.rs
src/cloud/: auth.rs  db.rs  mod.rs  models.rs  ota.rs  ota_db.rs  ota_server.rs  server.rs
src/engine/: cache.rs  filter.rs  mod.rs  rules.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  server.rs  tools.rs
src/mqtt/: client.rs  mod.rs  publisher.rs  subscriber.rs
src/storage/: db.rs  mod.rs  models.rs
tests/integration/: ai_bridge_test.rs  cloud_api_test.rs  mcp_client_test.rs  mcp_e2e_test.rs  mqtt_test.rs  pipeline_test.rs
